docs - geoserver - do not fiddle with GC